# kalshi-mlb-market-analysis

./: .gitignore  REPORT.md  analyze.py  build_workbook.py  paper_run_final.xlsx  setup.sh  tracker_server.py  train.py  wp_model.py
data/: candles_DETNYY_ML.csv  candles_DETNYY_TOT.csv  candles_LAASEA_ML.csv  candles_LAASEA_TOT.csv  candles_MINHOU_ML.csv  candles_MINHOU_TOT.csv  candles_PITPHI_ML.csv  candles_PITPHI_TOT.csv  candles_SDCHC_ML.csv  candles_SDCHC_TOT.csv  candles_TBKC_ML.csv  candles_TBKC_TOT.csv  event_study.csv  event_summary.csv  games.csv  plays_DETNYY.csv  plays_LAASEA.csv  plays_MINHOU.csv  plays_PITPHI.csv  plays_SDCHC.csv  plays_TBKC.csv
deploy/: com.sid.kalshi-paper-trader.plist  com.sid.kalshi-tracker.plist  deploy_once.sh
kalshi-pipeline/: Cargo.toml  README.md  config.example.toml  ratings.csv
kalshi-pipeline/crates/collector/: Cargo.toml
kalshi-pipeline/crates/collector/src/: main.rs
kalshi-pipeline/crates/common/: Cargo.toml
kalshi-pipeline/crates/common/src/: lib.rs
kalshi-pipeline/crates/paper-trader/: Cargo.toml
kalshi-pipeline/crates/paper-trader/src/: main.rs
