[package]
name = "collector"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
csv = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
