[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
csv = { workspace = true }
# auth signing for websocket / authed endpoints
rsa = { version = "0.9", features = ["sha2"] }
rand_core = { version = "0.6", features = ["std", "getrandom"] }
sha2 = "0.10"
base64 = "0.22"
